[package]
name = "onetutorial-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "3.2.23"
csv = "1.1"
log4rs = "1.0"
log = "0.4"
lazy_static = "1.4.0"
chrono = "0.4"
sendmail = "2.0"